# Fortrust

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
assets/blocklists/: hosts_default.txt
assets/filter-lists/: brave-unbreak.txt  easylist.txt  easyprivacy.txt
bins/fortrust/: Cargo.toml
bins/fortrust/src/: main.rs
bins/netproc/: Cargo.toml
bins/netproc/src/: main.rs
bins/renderer/: Cargo.toml
bins/renderer/src/: main.rs
config/: fortrust.settings.toml
crates/fortrust-chrome/: Cargo.toml
crates/fortrust-chrome/src/: animation.rs  app.rs  backgrounds.rs  download.rs  icons.rs  lib.rs  omnibox.rs  shield.rs  sidebar.rs  speed_dial.rs  theme.rs
crates/fortrust-core/: Cargo.toml
crates/fortrust-core/src/: config.rs  images.rs  lib.rs  privacy.rs  tabs.rs  workspaces.rs
crates/fortrust-dom/: Cargo.toml
crates/fortrust-dom/src/: lib.rs
crates/fortrust-ipc/: Cargo.toml
crates/fortrust-ipc/src/: channel.rs  codec.rs  lib.rs  messages.rs
crates/fortrust-js/: Cargo.toml
crates/fortrust-js/src/: event_loop.rs  hooks.rs  lib.rs  runtime.rs
crates/fortrust-js/src/bindings/: console.rs  dom_api.rs  fetch.rs  location.rs  mod.rs  navigator.rs  storage.rs  timers.rs
crates/fortrust-layout/: Cargo.toml
crates/fortrust-layout/src/: lib.rs
crates/fortrust-net/: Cargo.toml
crates/fortrust-net/src/: cache.rs  client.rs  dns.rs  lib.rs  netproc.rs  tls.rs  transport.rs
crates/fortrust-paint/: Cargo.toml
crates/fortrust-paint/src/: lib.rs
crates/fortrust-privacy/: Cargo.toml
crates/fortrust-privacy/src/: adblock_engine.rs  blocker.rs  cookie_policy.rs  csp.rs  fingerprint.rs  https_upgrade.rs  lib.rs
crates/fortrust-renderer/: Cargo.toml
crates/fortrust-renderer/src/: lib.rs
crates/fortrust-search/: Cargo.toml
crates/fortrust-search/src/: lib.rs
crates/fortrust-storage/: Cargo.toml
crates/fortrust-storage/src/: bookmarks.rs  cookies.rs  history.rs  lib.rs  settings.rs
crates/fortrust-style/: Cargo.toml
crates/fortrust-style/src/: lib.rs
crates/trust-engine/: Cargo.toml
crates/trust-engine/src/: lib.rs
