[workspace]
members = [
    "crates/fortrust-core",
    "crates/fortrust-dom",
    "crates/fortrust-ipc",
    "crates/fortrust-js",
    "crates/fortrust-layout",
    "crates/fortrust-net",
    "crates/fortrust-paint",
    "crates/fortrust-privacy",
    "crates/fortrust-renderer",
    "crates/fortrust-search",
    "crates/fortrust-storage",
    "crates/fortrust-style",
    "crates/trust-engine",
    "crates/fortrust-chrome",
    "bins/fortrust",
    "bins/netproc",
    "bins/renderer",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/fortrust"

[workspace.dependencies]
ahash = "0.8"
base64 = "0.22"
bincode = { version = "2", features = ["serde"] }
bytes = "1"
blake3 = "1"
bumpalo = "3"
chrono = { version = "0.4", features = ["serde"] }
compact_str = { version = "0.8", features = ["serde"] }
cssparser = "0.35"
dashmap = "6"
adblock = "0.12"
aho-corasick = "1"
argon2 = "0.5"
cosmic-text = "0.12"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.33"
egui_wgpu = "0.33"
h3 = "0.0.6"
h3-quinn = "0.0.6"
hickory-resolver = { version = "0.25", features = ["dns-over-https-rustls", "dns-over-tls"] }
interpolation = "0.3"
markup5ever = "0.14"
publicsuffix = "2"
quinn = { version = "0.11", features = ["rustls"] }
rusty_v8 = "0.93"
selectors = "0.25"
swash = "0.1"
tantivy = "0.22"
toml = "0.8"
urlencoding = "2"
wgpu = { version = "27", features = ["dx12", "vulkan"] }
http = "1"
futures-util = "0.3"
futures-executor = "0.3"
html5ever = "0.35"
rand = "0.8"
redb = "2"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "stream", "json"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
webpki-roots = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
