[package]
name = "netproc"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
fortrust-core = { path = "../../crates/fortrust-core" }
fortrust-net = { path = "../../crates/fortrust-net" }
fortrust-ipc = { path = "../../crates/fortrust-ipc" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
