[package]
name = "fortrust-chrome"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
eframe.workspace = true
egui.workspace = true
fortrust-core = { path = "../fortrust-core" }
fortrust-storage = { path = "../fortrust-storage" }
trust-engine = { path = "../trust-engine" }
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
