[package]
name = "fortrust-chrome"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
eframe.workspace = true
egui.workspace = true
fortrust-core = { path = "../fortrust-core" }
fortrust-storage = { path = "../fortrust-storage" }
fortrust-search = { path = "../fortrust-search" }
trust-engine = { path = "../trust-engine" }
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
image = "0.24"
once_cell = "1.18"
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
fortrust-ipc = { path = "../fortrust-ipc" }
