[package]
name = "fortrust-ipc"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde", "derive"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time", "net", "io-util"] }
bytes = "1"
thiserror = "1"
tracing = "0.1"

