[package]
name = "fortrust-net"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
fortrust-core = { path = "../fortrust-core" }
fortrust-ipc = { path = "../fortrust-ipc" }
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
rustls.workspace = true
tokio.workspace = true
url.workspace = true
webpki-roots.workspace = true
