[package]
name = "fortrust-paint"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
fortrust-core = { path = "../fortrust-core" }
fortrust-layout = { path = "../fortrust-layout" }
fortrust-style = { path = "../fortrust-style" }

[dev-dependencies]
fortrust-dom = { path = "../fortrust-dom" }
