[package]
name = "fortrust-privacy"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
compact_str.workspace = true
dashmap.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
