[package]
name = "fortrust-renderer"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
fortrust-dom = { path = "../fortrust-dom" }
fortrust-layout = { path = "../fortrust-layout" }
fortrust-paint = { path = "../fortrust-paint" }
fortrust-style = { path = "../fortrust-style" }
