[package]
name = "fortrust-storage"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
bincode.workspace = true
blake3.workspace = true
chrono.workspace = true
dashmap.workspace = true
ring.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
