[package]
name = "trust-engine"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
http.workspace = true
fortrust-core = { path = "../fortrust-core" }
fortrust-dom = { path = "../fortrust-dom" }
fortrust-js = { path = "../fortrust-js", optional = true }
fortrust-layout = { path = "../fortrust-layout" }
fortrust-net = { path = "../fortrust-net" }
fortrust-paint = { path = "../fortrust-paint" }
fortrust-renderer = { path = "../fortrust-renderer" }
fortrust-style = { path = "../fortrust-style" }
futures-util.workspace = true
tracing.workspace = true
url.workspace = true

[features]
javascript = ["fortrust-js"]
default = ["javascript"]

[dev-dependencies]
futures-executor.workspace = true
