[package]
name = "trust-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
html5ever = "0.35"
markup5ever = "0.14"
url = "2"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2"
anyhow = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }

bytes = { workspace = true }
http = { workspace = true }
futures-util = { workspace = true }
futures-executor = { workspace = true }
tracing = { workspace = true }

# Local workspace crates
fortrust-core = { path = "../fortrust-core" }
fortrust-dom = { path = "../fortrust-dom" }
fortrust-js = { path = "../fortrust-js", optional = true }
fortrust-layout = { path = "../fortrust-layout" }
fortrust-net = { path = "../fortrust-net" }
fortrust-paint = { path = "../fortrust-paint" }
fortrust-renderer = { path = "../fortrust-renderer" }
fortrust-style = { path = "../fortrust-style" }

[features]
javascript = ["fortrust-js"]
default = ["javascript"]

[dev-dependencies]
futures-executor = { workspace = true }

